opam-version: "1.2"
version: "1.0"
maintainer: "berke.durak@gmail.com"
authors: ["Berke Durak"]
homepage: "https://github.com/berke/autotimesheet"
bug-reports: "https://github.com/berke/autotimesheet/issues"
dev-repo: "https://github.com/berke/autotimesheet"
license: "BSD"
build: [
  ["jbuilder" "build" "--root" "." "-j" jobs "@install"]
]
depends: [
  "bigarray"
  "unix"
]
